【pangu-app-starter】盘古移动端多平台开发脚手架：针对微信小程序做兼容性调整。

--- a/pangu-app-starter/m.html
+++ b/pangu-app-starter/m.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+	<link rel="shortcut icon" type="image/x-icon" href="https://resource.pulanit.com/pangu-app-starter/favicon.ico">
     <title>盘古移动端多平台快速开发脚手架（盘古开发框架旗下生态项目）</title>
 </head>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
