--- a/pangu-app-starter/template.h5.html
+++ b/pangu-app-starter/template.h5.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link rel="shortcut icon" type="image/x-icon" href="https://resource.pulanit.com/pangu-app-starter/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="https://cdn.pulanit.com/pangu-app-starter/favicon.ico">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<title>
 			<%= htmlWebpackPlugin.options.title %>
