--- a/pangu-app-starter/m.html
+++ b/pangu-app-starter/m.html
@@ -6,7 +6,6 @@
 	<link rel="shortcut icon" type="image/x-icon" href="https://cdn.pulanit.com/pangu-app-starter/favicon.ico">
     <title>盘古移动端多平台快速开发脚手架（盘古开发框架旗下生态项目）</title>
 </head>
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <!--The Main Thing-->
 <div id="wrapper">
     <div class="phone view_3" id="phone_1">
@@ -34,7 +33,8 @@
     /*Controls*/
     function updateIframe() {
         phone.style.width = "380px";
-        phone.style.height = $("body").height() - 100;
+        phone.style.height = document.body.clientHeight - 125;
+		
     }
     updateIframe();
 </script>
@@ -67,26 +67,5 @@
         -webkit-transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
         transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
         box-shadow: 0px 3px 0 #BBB, 0px 4px 0 #BBB, 0px 5px 0 #BBB, 0px 7px 0 #BBB, 0px 10px 20px #666;
-    }
-
-    @media (max-width: 900px) {
-        #wrapper {
-            -webkit-transform: scale(0.8, 0.8);
-            transform: scale(0.8, 0.8);
-        }
-    }
-
-    @media (max-width: 700px) {
-        #wrapper {
-            -webkit-transform: scale(0.6, 0.6);
-            transform: scale(0.6, 0.6);
-        }
-    }
-
-    @media (max-width: 500px) {
-        #wrapper {
-            -webkit-transform: scale(0.4, 0.4);
-            transform: scale(0.4, 0.4);
-        }
     }
 </style>
